testsuite/tests/typecheck/should_fail/T17021.stderr

T17021.hs:18:5: error:
    Cannot use function with representation-polymorphic arguments:
      MkT :: Int -> T
    (Note that representation-polymorphic primops,
    such as 'coerce' and unboxed tuples, are eta-expanded
    internally because they must occur fully saturated.
    Use -fprint-typechecker-elaboration to display the full expression.)
    Representation-polymorphic arguments:
      Int :: TYPE (Id ('BoxedRep 'Lifted))

T17021.hs:18:9: error:
    A representation-polymorphic type is not allowed here:
      Type: Int
      Kind: TYPE (Id ('BoxedRep 'Lifted))
    In the type of expression: 42
